- added GET /imagegraph/:id handler, script and openapi spec
